--- a/views/layout.erb
+++ b/views/layout.erb
@@ -4,12 +4,13 @@
     <meta charset="utf-8">
     <title>CSA Metro Area Sortable Population Data</title>
     <link rel="stylesheet" href="/main.css">
+    <link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet">
   </head>
   <body>
     <header>
       <h1>US Population change</h1>
       <h2>CSA Metro Area sortable data</h2>
-      <p><a href="http://www.census.gov/popest/data/metro/totals/2015/index.html" target="_blank">data download</a></p>
+      <p><a href="http://www.census.gov/popest/data/metro/totals/2015/index.html" target="_blank">download</a> the original data</p>
     </header>
     <%== yield %>
   </body>
