--- a/views/query_results.erb
+++ b/views/query_results.erb
@@ -1,1 +1,78 @@
-<h1>hi</h1>
+<section class="table-wrapper">
+  <table id="table" class="tablesorter">
+    <thead>
+      <tr>
+        <th>city</th>
+        <th>state</th>
+        <th>total population</th>
+        <th>population change</th>
+        <th>natural increase</th>
+        <th>int migration</th>
+        <th>domestic migration</th>
+        <th>percent change</th>
+      </tr>
+    </thead>
+    <tbody>
+        <tr>
+          <td>Atlanta</td>
+          <td>georgia</td>
+          <td>23092019</td>
+          <td>32234</td>
+          <td>4902</td>
+          <td>-221</td>
+          <td>392</td>
+          <td>-%12</td>
+        </tr>
+        <tr>
+          <td>Detroit</td>
+          <td>Michigan</td>
+          <td>9009209</td>
+          <td>892349</td>
+          <td>9002</td>
+          <td>2210</td>
+          <td>23</td>
+          <td>%30</td>
+        </tr>
+        <tr>
+          <td>Atlanta</td>
+          <td>georgia</td>
+          <td>23092019</td>
+          <td>32234</td>
+          <td>4902</td>
+          <td>-221</td>
+          <td>392</td>
+          <td>-%12</td>
+        </tr>
+        <tr>
+          <td>Detroit</td>
+          <td>Michigan</td>
+          <td>9009209</td>
+          <td>892349</td>
+          <td>9002</td>
+          <td>2210</td>
+          <td>23</td>
+          <td>%30</td>
+        </tr>
+        <tr>
+          <td>Atlanta</td>
+          <td>georgia</td>
+          <td>23092019</td>
+          <td>32234</td>
+          <td>4902</td>
+          <td>-221</td>
+          <td>392</td>
+          <td>-%12</td>
+        </tr>
+        <tr>
+          <td>Detroit</td>
+          <td>Michigan</td>
+          <td>9009209</td>
+          <td>892349</td>
+          <td>9002</td>
+          <td>2210</td>
+          <td>23</td>
+          <td>%30</td>
+        </tr>
+    </tbody>
+  </table>
+</section>
