--- a/views/layout.erb
+++ b/views/layout.erb
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>CSA Metro Area Sortable Population Data</title>
-    <link rel="stylesheet" href="/main.css">
+    <link rel="stylesheet" href="/mains.css">
     <link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet">
   </head>
   <body>
@@ -13,5 +13,6 @@
       <p><a href="http://www.census.gov/popest/data/metro/totals/2015/index.html" target="_blank">download</a> the original data</p>
     </header>
     <%== yield %>
+    <footer></footer>
   </body>
 </html>
