--- a/views/query_results.erb
+++ b/views/query_results.erb
@@ -7,72 +7,24 @@
         <th>total population</th>
         <th>population change</th>
         <th>natural increase</th>
-        <th>int migration</th>
+        <th>international migration</th>
         <th>domestic migration</th>
         <th>percent change</th>
       </tr>
     </thead>
     <tbody>
+      <% @storage.all_populatations.each do |row| %>
         <tr>
-          <td>Atlanta</td>
-          <td>georgia</td>
-          <td>23092019</td>
-          <td>32234</td>
-          <td>4902</td>
-          <td>-221</td>
-          <td>392</td>
-          <td>-%12</td>
+          <td><%= row[:geo_area] %></td>
+          <td><%= row[:state].split(' ').first %></td>
+          <td><%= row[:tot_pop] %></td>
+          <td><%= row[:tot_pop_change] %></td>
+          <td><%= row[:natural_increase] %></td>
+          <td><%= row[:net_int_mig] %></td>
+          <td><%= row[:net_domestic_mig] %></td>
+          <td></td>
         </tr>
-        <tr>
-          <td>Detroit</td>
-          <td>Michigan</td>
-          <td>9009209</td>
-          <td>892349</td>
-          <td>9002</td>
-          <td>2210</td>
-          <td>23</td>
-          <td>%30</td>
-        </tr>
-        <tr>
-          <td>Atlanta</td>
-          <td>georgia</td>
-          <td>23092019</td>
-          <td>32234</td>
-          <td>4902</td>
-          <td>-221</td>
-          <td>392</td>
-          <td>-%12</td>
-        </tr>
-        <tr>
-          <td>Detroit</td>
-          <td>Michigan</td>
-          <td>9009209</td>
-          <td>892349</td>
-          <td>9002</td>
-          <td>2210</td>
-          <td>23</td>
-          <td>%30</td>
-        </tr>
-        <tr>
-          <td>Atlanta</td>
-          <td>georgia</td>
-          <td>23092019</td>
-          <td>32234</td>
-          <td>4902</td>
-          <td>-221</td>
-          <td>392</td>
-          <td>-%12</td>
-        </tr>
-        <tr>
-          <td>Detroit</td>
-          <td>Michigan</td>
-          <td>9009209</td>
-          <td>892349</td>
-          <td>9002</td>
-          <td>2210</td>
-          <td>23</td>
-          <td>%30</td>
-        </tr>
+      <% end %>
     </tbody>
   </table>
 </section>
